--- a/LocalDbEFMigrations/LocalDbEFMigrations.csproj
+++ b/LocalDbEFMigrations/LocalDbEFMigrations.csproj
@@ -97,6 +97,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\LocalDbEFMigrations.mdf" />
+    <Content Include="App_Data\LocalDbEFMigrations_log.ldf">
+      <DependentUpon>LocalDbEFMigrations.mdf</DependentUpon>
+    </Content>
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -107,6 +111,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201602242345267_Init.cs" />
+    <Compile Include="Migrations\201602242345267_Init.Designer.cs">
+      <DependentUpon>201602242345267_Init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Widget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -121,8 +130,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Views\Default\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201602242345267_Init.resx">
+      <DependentUpon>201602242345267_Init.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
