--- a/LocalDbEFMigrations/Web.config
+++ b/LocalDbEFMigrations/Web.config
@@ -5,6 +5,10 @@
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
   </configSections>
+  <connectionStrings>
+    <add name="AppDb" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=LocalDbExample;Integrated Security=True;AttachDBFilename=|DataDirectory|\LocalDbEFMigrations.mdf" />
+    <!--add name="AppDbMigrations" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=LocalDbExample;Integrated Security=True;AttachDBFilename=|DataDirectory|\LocalDbEFMigrations\LocalDbEFMigrations.mdf" /-->
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
